Add outputs to Machine Learning notebooks

--- a/Machine learning/KNN imputer.ipynb
+++ b/Machine learning/KNN imputer.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c592facf-8e75-4bf7-9cc5-9b0805ca5e3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "463a79d0-9834-440a-8e0b-b170165e7f3d",
    "metadata": {},
    "outputs": [],
@@ -27,27 +36,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0b328dcd-d97a-4e2a-aaa4-431df8d2d8f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age  Pclass     Fare  Survived\n",
+       "0  22.0       3   7.2500         0\n",
+       "1  38.0       1  71.2833         1\n",
+       "2  26.0       3   7.9250         1\n",
+       "3  35.0       1  53.1000         1\n",
+       "4  35.0       3   8.0500         0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "271b0edc-1e18-4b06-8e8d-c862abc45d03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age         19.86532\n",
+       "Pclass       0.00000\n",
+       "Fare         0.00000\n",
+       "Survived     0.00000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isnull().mean()*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "88ed8a41-362e-4240-8234-fe6299604b0b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "47ce7386-4a61-4627-a656-560972419699",
    "metadata": {},
    "outputs": [],
@@ -68,17 +173,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bc61590d-04d1-435f-962a-3713539656b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.7208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16.7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>873</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31.3875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>876</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.8458</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Age  Pclass     Fare\n",
+       "30   40.0       1  27.7208\n",
+       "10    4.0       3  16.7000\n",
+       "873  47.0       3   9.0000\n",
+       "182   9.0       3  31.3875\n",
+       "876  20.0       3   9.8458"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "93a6b9b1-fc19-4cca-9ff1-6add1ee70406",
    "metadata": {},
    "outputs": [],
@@ -90,20 +270,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "409d3555-7483-4ca2-a194-ecbdb851fe1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.7208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>16.7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>31.3875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>9.8458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>707</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.6625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>708</th>\n",
+       "      <td>26.151292</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.7125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>709</th>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>49.5042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>710</th>\n",
+       "      <td>32.666667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>221.7792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>711</th>\n",
+       "      <td>49.762895</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25.9250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>712 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Age  Pclass      Fare\n",
+       "0    40.000000     1.0   27.7208\n",
+       "1     4.000000     3.0   16.7000\n",
+       "2    47.000000     3.0    9.0000\n",
+       "3     9.000000     3.0   31.3875\n",
+       "4    20.000000     3.0    9.8458\n",
+       "..         ...     ...       ...\n",
+       "707  30.000000     3.0    8.6625\n",
+       "708  26.151292     3.0    8.7125\n",
+       "709  71.000000     1.0   49.5042\n",
+       "710  32.666667     1.0  221.7792\n",
+       "711  49.762895     1.0   25.9250\n",
+       "\n",
+       "[712 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame(X_train_trf,columns=X_train.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6caa5401-93b2-484e-85f2-6e5435a51a64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7150837988826816"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lr = LogisticRegression()\n",
     "lr.fit(X_train_trf,y_train)\n",
@@ -114,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0e23fb9d-a261-4713-aa50-a6d2779b42dc",
    "metadata": {},
    "outputs": [],
@@ -127,10 +438,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1d5e19af-c043-44e5-be40-b0b831637860",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6927374301675978"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lr = LogisticRegression()\n",
     "lr.fit(X_train_trf2,y_train)\n",
@@ -138,6 +460,14 @@
     "\n",
     "accuracy_score(y_test,y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "010b88b4-b94a-49ba-be10-3d4254ab0fdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
