--- a/Machine learning/OneHotEncoding.ipynb
+++ b/Machine learning/OneHotEncoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ba554887-4973-4030-a18f-0ca4cdbc7481",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "98e97483-e0f8-48a8-aaa0-83213c023339",
    "metadata": {},
    "outputs": [],
@@ -23,20 +23,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2bf391e8-975c-4637-a6b1-412140d1761f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brand</th>\n",
+       "      <th>km_driven</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>owner</th>\n",
+       "      <th>selling_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Maruti</td>\n",
+       "      <td>145500</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Skoda</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Second Owner</td>\n",
+       "      <td>370000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Honda</td>\n",
+       "      <td>140000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Third Owner</td>\n",
+       "      <td>158000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hyundai</td>\n",
+       "      <td>127000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>225000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Maruti</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>First Owner</td>\n",
+       "      <td>130000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     brand  km_driven    fuel         owner  selling_price\n",
+       "0   Maruti     145500  Diesel   First Owner         450000\n",
+       "1    Skoda     120000  Diesel  Second Owner         370000\n",
+       "2    Honda     140000  Petrol   Third Owner         158000\n",
+       "3  Hyundai     127000  Diesel   First Owner         225000\n",
+       "4   Maruti     120000  Petrol   First Owner         130000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69d6776d-5d1a-4424-bc7d-751df9128292",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train,y_test = train_test_split(df.iloc[:,0:4],df.iloc[:,-1],test_size=0.2,random_state=0)"
@@ -44,17 +140,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3a17df30-839a-4d27-a21d-7422bd273e46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brand</th>\n",
+       "      <th>km_driven</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>owner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3042</th>\n",
+       "      <td>Hyundai</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>LPG</td>\n",
+       "      <td>First Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1520</th>\n",
+       "      <td>Tata</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Third Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2611</th>\n",
+       "      <td>Hyundai</td>\n",
+       "      <td>110000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Second Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3544</th>\n",
+       "      <td>Mahindra</td>\n",
+       "      <td>28000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Second Owner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4138</th>\n",
+       "      <td>Maruti</td>\n",
+       "      <td>15000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>First Owner</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         brand  km_driven    fuel         owner\n",
+       "3042   Hyundai      60000     LPG   First Owner\n",
+       "1520      Tata     150000  Diesel   Third Owner\n",
+       "2611   Hyundai     110000  Diesel  Second Owner\n",
+       "3544  Mahindra      28000  Diesel  Second Owner\n",
+       "4138    Maruti      15000  Petrol   First Owner"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "af5fe47f-85d9-4b42-ba22-1dfb9ff17dc9",
    "metadata": {},
    "outputs": [],
@@ -64,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c70c3d3b-39c1-4a8f-8cdf-f41a28023e2e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "836b670a-b515-4cb6-bf61-d618ba131b98",
    "metadata": {},
    "outputs": [],
@@ -85,10 +262,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6affc113-90ab-4430-a8dd-4cfe8b8f72c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 1],\n",
+       "       [1, 0, 0, ..., 1, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 1, ..., 1, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 1, ..., 0, 0, 0]], dtype=int32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_train_new"
    ]
@@ -111,10 +305,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2850de7e-4388-415d-b46d-6948ff556d0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Maruti           2448\n",
+       "Hyundai          1415\n",
+       "Mahindra          772\n",
+       "Tata              734\n",
+       "Toyota            488\n",
+       "Honda             467\n",
+       "Ford              397\n",
+       "Chevrolet         230\n",
+       "Renault           228\n",
+       "Volkswagen        186\n",
+       "BMW               120\n",
+       "Skoda             105\n",
+       "Nissan             81\n",
+       "Jaguar             71\n",
+       "Volvo              67\n",
+       "Datsun             65\n",
+       "Mercedes-Benz      54\n",
+       "Fiat               47\n",
+       "Audi               40\n",
+       "Lexus              34\n",
+       "Jeep               31\n",
+       "Mitsubishi         14\n",
+       "Land                6\n",
+       "Force               6\n",
+       "Isuzu               5\n",
+       "Ambassador          4\n",
+       "Kia                 4\n",
+       "MG                  3\n",
+       "Daewoo              3\n",
+       "Ashok               1\n",
+       "Opel                1\n",
+       "Peugeot             1\n",
+       "Name: brand, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "counts = df['brand'].value_counts()\n",
     "counts"
@@ -122,17 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "68a05fd9-1360-4927-834d-b2c171c0890f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['brand'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d69c7236-3eb0-44f1-b5e4-6eeac123f3e8",
    "metadata": {},
    "outputs": [],
@@ -142,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "631267e7-6076-45bb-8b4d-04b8610bbb06",
    "metadata": {},
    "outputs": [],
@@ -152,20 +400,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "194a397f-2c27-450f-af00-1fda5ddeef0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Nissan', 'Jaguar', 'Volvo', 'Datsun', 'Mercedes-Benz', 'Fiat', 'Audi',\n",
+       "       'Lexus', 'Jeep', 'Mitsubishi', 'Land', 'Force', 'Isuzu', 'Ambassador',\n",
+       "       'Kia', 'MG', 'Daewoo', 'Ashok', 'Opel', 'Peugeot'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "59374a21-cb94-4a5e-ae1b-090e44fa6f21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BMW</th>\n",
+       "      <th>Chevrolet</th>\n",
+       "      <th>Ford</th>\n",
+       "      <th>Honda</th>\n",
+       "      <th>Hyundai</th>\n",
+       "      <th>Mahindra</th>\n",
+       "      <th>Maruti</th>\n",
+       "      <th>Renault</th>\n",
+       "      <th>Skoda</th>\n",
+       "      <th>Tata</th>\n",
+       "      <th>Toyota</th>\n",
+       "      <th>Volkswagen</th>\n",
+       "      <th>uncommon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1854</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6947</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6934</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4804</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7254</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      BMW  Chevrolet  Ford  Honda  Hyundai  Mahindra  Maruti  Renault  Skoda  \\\n",
+       "1854    0          1     0      0        0         0       0        0      0   \n",
+       "6947    0          0     0      0        0         0       0        0      0   \n",
+       "6934    0          0     0      0        0         0       0        0      0   \n",
+       "4804    0          0     0      1        0         0       0        0      0   \n",
+       "7254    0          0     0      0        0         0       0        0      0   \n",
+       "\n",
+       "      Tata  Toyota  Volkswagen  uncommon  \n",
+       "1854     0       0           0         0  \n",
+       "6947     1       0           0         0  \n",
+       "6934     1       0           0         0  \n",
+       "4804     0       0           0         0  \n",
+       "7254     1       0           0         0  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.get_dummies(df['brand'].replace(reps,'uncommon'),dtype=int).sample(5)"
    ]
