--- a/practice/data handling.ipynb
+++ b/practice/data handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ab1f9c6e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3b376466",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3f05f97b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e1243226",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71203865",
    "metadata": {},
    "outputs": [],
@@ -69,10 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66bfa047",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "how are you?\n",
+      "I'm fine\n"
+     ]
+    }
+   ],
    "source": [
     "# reading from file:\n",
     "# -> Using read()\n",
@@ -84,10 +94,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "25ef9f81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "\n",
+      "how are you?\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# -> using readline()\n",
     "f = open('sample.txt','r')\n",
@@ -100,10 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8db95c1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "how are you?\n",
+      "I'm fine"
+     ]
+    }
+   ],
    "source": [
     "f = open('sample.txt','r')\n",
     "\n",
@@ -118,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a0a14440",
    "metadata": {},
    "outputs": [],
@@ -128,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0857d337",
    "metadata": {},
    "outputs": [],
@@ -141,10 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "286750f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Take like an angel\n",
+      "Walk like an angel\n",
+      "The devil in the sky\n"
+     ]
+    }
+   ],
    "source": [
     "# read\n",
     "with open('sample.txt','r') as f:\n",
@@ -153,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c55d16ce",
    "metadata": {},
    "outputs": [],
@@ -166,10 +207,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8c5f8c01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "hello worldhello worldhello worldhello worldhello \n",
+      "orldhello worldhello worldhello worldhello worldhe\n",
+      "lo worldhello worldhello worldhello worldhello wor\n",
+      "dhello worldhello worldhello worldhello worldhello\n",
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "hello worldhello worldhello worldhello worldhello \n",
+      "orldhello worldhello worldhello worldhello worldhe\n",
+      "lo worldhello worldhello worldhello worldhello wor\n",
+      "dhello worldhello worldhello worldhello worldhello\n",
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "hello worldhello worldhello worldhello worldhello \n",
+      "orldhello worldhello worldhello worldhello worldhe\n",
+      "lo worldhello worldhello worldhello worldhello wor\n",
+      "dhello worldhello worldhello worldhello worldhello\n",
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "hello worldhello worldhello worldhello worldhello \n",
+      "orldhello worldhello worldhello worldhello worldhe\n",
+      "lo worldhello worldhello worldhello worldhello wor\n",
+      "dhello worldhello worldhello worldhello worldhello\n",
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "hello worldhello worldhello worldhello worldhello \n",
+      "orldhello worldhello worldhello worldhello worldhe\n",
+      "lo worldhello worldhello worldhello worldhello wor\n",
+      "dhello worldhello worldhello worldhello worldhello\n",
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "hello worldhello worldhello worldhello worldhello \n",
+      "orldhello worldhello worldhello worldhello worldhe\n",
+      "lo worldhello worldhello worldhello worldhello wor\n",
+      "dhello worldhello worldhello worldhello worldhello\n",
+      "worldhello worldhello worldhello worldhello worldh\n",
+      "llo worldhello worldhello worldhello worldhello wo\n",
+      "ldhello worldhello worldhello worldhello worldhell\n",
+      " worldhello worldhello worldhello worldhello world\n",
+      "ello worldhello worldhello worldhello worldhello w\n",
+      "rldhello worldhello worldhello worldhello worldhel\n",
+      "o worldhello worldhello worldhello worldhello worl\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open('big.txt','r') as f:\n",
     "    \n",
@@ -182,10 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "33677042",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ke like an angel\n",
+      "Wal\n",
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "# seek and tell function:\n",
     "with open('sample.txt','r') as f:\n",
@@ -196,10 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a31c8721",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Take like an angel\n",
+      "W\n",
+      "20\n",
+      "an angel\n",
+      "Walk l\n"
+     ]
+    }
+   ],
    "source": [
     "with open('sample.txt','r') as f:\n",
     "    f.seek(0)   \n",
@@ -211,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "04280dde",
    "metadata": {},
    "outputs": [],
@@ -225,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7b5ba9fc",
    "metadata": {},
    "outputs": [],
@@ -235,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "255a94dc",
    "metadata": {},
    "outputs": [],
@@ -248,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "565a8f2a",
    "metadata": {},
    "outputs": [],
@@ -260,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e1619b5c",
    "metadata": {},
    "outputs": [],
@@ -289,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c6bd79e0",
    "metadata": {},
    "outputs": [],
@@ -305,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ea3f788a",
    "metadata": {},
    "outputs": [],
@@ -319,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b1955300",
    "metadata": {},
    "outputs": [],
@@ -330,10 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3c0eb69c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'winkle', 'age': 24, 'gender': 'female'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "# deserialization using json :\n",
     "import json\n",
@@ -345,21 +498,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "108f7632",
    "metadata": {},
    "outputs": [],
    "source": [
     "# serialization and deserialization can handle all data types."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d61c7565",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
